--- a/part2-1/index.css
+++ b/part2-1/index.css
@@ -8,3 +8,14 @@ h1 {
     padding-top: 3px;
     font-size: 14px;
 }
+
+
+.error {
+    color: red;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
